--- a/nsdserver/src/main/AndroidManifest.xml
+++ b/nsdserver/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dev.bins.nsdserver">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
